fix fantom symbols, fix zoom on iphone

--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -19,6 +19,11 @@
       width: 100%;
       margin-top: 12px;
       font-weight: 500;
+
+      @include mobileL {
+        font-size: 12px;
+      }
+
     }
 
     &_caption>a {
